# artifact-keeper

./: .env.example  .gitguardian.yaml  .gitignore  .mergify.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.openscap  Dockerfile.redteam  README.md  TESTING.md  docker-compose.local-dev.yml  docker-compose.mesh-e2e.yml  docker-compose.test.yml  docker-compose.yml  sonar-project.properties
.beads/: .gitignore  beads.db  beads.db-shm  beads.db-wal  beads.db.corrupt  beads.left.meta.json  issues.jsonl  last-touched  sync-state.json
.github/: FUNDING.yml  dependabot.yml
.sqlx/: query-0026019d50481bf9a5174478422f825d85959de7427543821fcf5f0cec9b71b5.json  query-0068d46eafae7f640db30b4fb99de8d0541f2971f0115d45c835d9cf61386df2.json  query-0084cf6b255748fbcb135b80b8da3e2bed061c345d83ff09f184cf810fe48f21.json  query-010d5547e8c134597ede04bc14b91501159eab5e24b43c5ded78d49839024627.json  query-0171ce57693cc8c3a83016b4ad2abb99fa235b07db2f7604af9c8b7a75e29f3f.json  query-020983592f6cf855fb96265a25dd7eecd0c57b7fb3a7952b43f58e5da903b867.json  query-02196f8b7d1b6402cde50e4aef4c5ccf3646b140977f3aa9c8ca6443dd3c7e19.json  (+168 more)
backend/: Cargo.toml  build.rs
backend/.sqlx/: query-0995263def279b16869046f54e32ebfe9cdeae05b92eacaaa930544a19ac95ff.json  query-0b3b47974afe6bd57ae0cd3ee0025ba173a80a5d7afc7d43e74ed199c59bb491.json  query-1b05fdd4326d5f6097ea45a00d9e54ae57f7c0f5fe894599613a00dd3dfcc32c.json  query-21a30e6583857296ab40fcda8329d65a297d5e21168f780d0834949b67aac538.json  query-26797c1e3adba7571965fe60a7d0e62e5dff11711d94c87a2a9d01b6293ba739.json  query-2df605c01ac1ec9f732d5f71d822ae81d5a0fdd48eb6be6f031d3e01df318cf4.json  query-39bccdd40b46f8d0aa18676cc862192f856b2491d0a16bf66721484ddb572fe7.json  query-3a93e6c7a10de680e4f0b89ab4a7bbfcf845c87aa34730e85d3f22c31a3d8db5.json  query-6ba1ccde5a63872433d614b17a1704f1851e78f4b49ff3fe99040e9080a30c51.json  query-70b24180f3d16163ec0aa9a692ea92725454eb484c2f4934186c6f6d95917866.json  query-7f8e693555ad834e2d88cdf8df3782ba13b5ac11106a087fcbc2ed95b539ceff.json  query-86bcd2a00a72a469e0457f7ac538fc774844e2c6534dfe56924f9f8a162f3b50.json  query-96b1c10cb2571e5e2ba7bd46e2ae3b3cf4d7578f277add41506ffdc2a0c39f79.json  query-9eaed1716fe8ecb2333468c10730ec436129dcd40a2244a89a890641ff6a2b46.json  query-ac39f4527ee136ed2af003c4b47d9d83be1e59085496a4699cc4903a3de76aee.json  query-af67dd3f269be8e98e2f7af3f6be07b49d3be3ac0d5f5b204a80d7e65064b94d.json  query-be7241fe1d63da6b06095f21edd620c9a780715e48327b647a86e066fc287057.json  query-c8885be5c660228869158f008e5d103a8d16ebc8a6d8352362f4e0b34448b6d1.json  query-d02a41072766982df6e1fd809b14c53ab0085f7939ee762cbf2dc6818c0a48d7.json  query-e2be146bb020607da02ead349d74b1468412586fa9d71590b49d7533484d233b.json  query-fa04731e58524b493754b25ca27436f32dba81fa8662138d8ced72ea358efd9a.json
backend/migrations/: 001_users.sql  002_roles.sql  004_artifacts.sql  005_audit_log.sql  013_must_change_password.sql  014_wasm_plugins.sql  028_replication_priority.sql  029_transfer_sessions.sql  030_peer_connections.sql  031_network_profiles.sql  047_staging_repository_type.sql
backend/src/: config.rs  error.rs  lib.rs  macros.rs  main.rs
backend/src/api/: download_response.rs  dto.rs  mod.rs  openapi.rs  routes.rs
backend/src/api/handlers/: admin.rs  alpine.rs  analytics.rs  ansible.rs  approval.rs  artifact_labels.rs  artifacts.rs  auth.rs  builds.rs  cargo.rs  chef.rs  cocoapods.rs  composer.rs  conan.rs  conda.rs  cran.rs  debian.rs  dependency_track.rs  edge.rs  events.rs  gitlfs.rs  goproxy.rs  groups.rs  health.rs  helm.rs  hex.rs  huggingface.rs  incus.rs  jetbrains.rs  lifecycle.rs  maven.rs  migration.rs  mod.rs  monitoring.rs  npm.rs  nuget.rs  oci_v2.rs  packages.rs  peer.rs  peer_instance_labels.rs  (+37 more)
backend/src/api/middleware/: auth.rs  demo.rs  metrics.rs  mod.rs  rate_limit.rs  security_headers.rs  setup.rs  tracing.rs
backend/src/cli/: migrate.rs  migrate_runner.rs
backend/src/formats/: alpine.rs  ansible.rs  cargo.rs  chef.rs  composer.rs  conan.rs  conda_native.rs  cran.rs  debian.rs  format_tests.rs  generic.rs  go.rs  helm.rs  hex.rs  incus.rs  maven.rs  maven_version.rs  mod.rs  npm.rs  nuget.rs  oci.rs  pub.rs  puppet.rs  pypi.rs  rpm.rs  rubygems.rs  sbt.rs  swift.rs  terraform.rs  vagrant.rs  wasm.rs
backend/src/grpc/: auth_interceptor.rs  mod.rs  sbom_server.rs
backend/src/models/: api_token.rs  edge_node.rs  format_handler.rs  migration.rs  mod.rs  peer_connection.rs  peer_instance.rs  plugin.rs  plugin_manifest.rs  repository.rs  sbom.rs  security.rs  signing_key.rs  sync_task.rs  transfer_session.rs  user.rs
backend/src/services/: analytics_service.rs  artifact_label_service.rs  artifact_service.rs  artifactory_client.rs  artifactory_import.rs  audit_service.rs  auth_config_service.rs  auth_service.rs  backup_service.rs  build_service.rs  crash_reporting_service.rs  curation_service.rs  dependency_track_service.rs  edge_service.rs  encryption.rs  event_bus.rs  grype_scanner.rs  health_monitor_service.rs  helm_lint_checker.rs  http_client.rs  image_scanner.rs  incus_scanner.rs  ldap_service.rs  lifecycle_service.rs  meili_service.rs  metrics_service.rs  migration_service.rs  migration_worker.rs  mod.rs  nexus_client.rs  oidc_service.rs  openscap_scanner.rs  package_service.rs  peer_instance_service.rs  peer_service.rs  plugin_registry.rs  plugin_service.rs  policy_service.rs  promotion_policy_service.rs  proxy_service.rs  (+26 more)
backend/src/storage/: azure.rs  filesystem.rs  gcs.rs  mod.rs  s3.rs
backend/src/wit/: format-plugin.wit
backend/tests/: incus_upload_tests.rs  integration_tests.rs  lifecycle_policy_tests.rs  replication_integration.rs  security_tests.rs  tag_filtered_replication_tests.rs
backend/tests/common/: fixtures.rs  mod.rs
edge/: Cargo.toml
edge/src/: cache.rs  main.rs  peers.rs  replication.rs  scheduler.rs  sync.rs  transfer.rs
plugins/plugin-template/: Cargo.toml  plugin.toml
plugins/plugin-template/src/: lib.rs
plugins/sample-plugin/: Cargo.toml  plugin.toml
plugins/sample-plugin/src/: lib.rs
(+558 files in other folders)
