[workspace]
resolver = "2"
members = ["backend", "edge"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/yourorg/artifact-keeper"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["multipart", "tokio"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Checksums
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"

# S3 storage - disabled until AWS SDK supports Rust 1.85+
# Re-enable when Rust 1.88+ is stable or use rust-s3 alternative
# aws-sdk-s3 = "1.x"
# aws-config = "1.x"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Config
dotenvy = "0.15"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for proxy repos)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async streams
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.5"
