[workspace]
resolver = "2"
members = ["backend", "edge"]

[workspace.package]
version = "1.0.0-rc.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourorg/artifact-keeper"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["multipart", "tokio"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.18"

# Checksums
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
hmac = "0.12"

# S3 storage using rust-s3 crate (works with Rust 1.75+)
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Config
dotenvy = "0.15"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"

# HTTP client (for proxy repos)
reqwest = { version = "0.13", features = ["json", "stream", "form"] }

# URL encoding
serde_urlencoded = "0.7"

# Async streams
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
bytes = "1.5"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# WASM runtime
wasmtime = { version = "24.0", features = ["component-model", "async"] }
wasmtime-wasi = "24.0"

# Git operations
git2 = "0.19"
meilisearch-sdk = "0.27"

# gRPC
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"
