[package]
name = "echo-format-plugin"
version = "1.0.0"
edition = "2021"
description = "Sample echo format handler plugin for Artifact Keeper - echoes back artifact metadata"
license = "MIT"
authors = ["Artifact Keeper Team"]
repository = "https://github.com/artifact-keeper/sample-plugins"

[lib]
crate-type = ["cdylib"]

[dependencies]
# wit-bindgen generates Rust bindings from the WIT interface
wit-bindgen = "0.36"

# For JSON handling in metadata
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.component]
# The WASM component target
package = "artifact-keeper:format"

[package.metadata.component.target]
# Path to the WIT interface definition
path = "wit"

[package.metadata.component.dependencies]
